--- a/EntityFrameworkCore.Manipulation.Extensions/EntityFrameworkCore.Manipulation.Extensions.csproj
+++ b/EntityFrameworkCore.Manipulation.Extensions/EntityFrameworkCore.Manipulation.Extensions.csproj
@@ -5,7 +5,7 @@
     <SignAssembly>true</SignAssembly>
     <DelaySign>false</DelaySign>
     <AssemblyOriginatorKeyFile>EntityFrameworkCore.Manipulation.Extensions.SigningKey.snk</AssemblyOriginatorKeyFile>
-    <Version>1.0.0-preview</Version>
+    <Version>1.0.0-preview2</Version>
     <Company />
     <Authors>Sebastian Blomberg</Authors>
     <PackageProjectUrl>https://github.com/sebbe33/EntityFrameworkCore.Manipulation.Extensions</PackageProjectUrl>
