--- a/.github/workflows/build-lib.yml
+++ b/.github/workflows/build-lib.yml
@@ -21,5 +21,10 @@ jobs:
       run: dotnet restore
     - name: Build
       run: dotnet build --no-restore
-    # - name: Test
-    #  run: dotnet test --no-build --verbosity normal
+    - name: Test
+      env:
+        INTEGRATION_TEST_SQL_SERVER: entityframeworkcore-manipulation-extensions.database.windows.net
+        INTEGRATION_TEST_SQL_SERVER_DB: entityframeworkcore-manipulation-extensions-integration-testing
+        INTEGRATION_TEST_SQL_SERVER_DB_USER: ${{ secrets.INTEGRATION_TEST_SQL_SERVER_DB_USER }}
+        INTEGRATION_TEST_SQL_SERVER_DB_PASSWORD: ${{ secrets.INTEGRATION_TEST_SQL_SERVER_DB_PASSWORD }}
+      run: dotnet test --no-build --verbosity normal
