--- a/EntityFrameworkCore.Manipulation.Extensions/EntityFrameworkCore.Manipulation.Extensions.csproj
+++ b/EntityFrameworkCore.Manipulation.Extensions/EntityFrameworkCore.Manipulation.Extensions.csproj
@@ -19,7 +19,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.1" />
-    <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="4.1.0" />
   </ItemGroup>
 
   <ItemGroup>
