--- a/EntityFrameworkCore.Manipulation.Extensions.IntegrationTests/EntityFrameworkCore.Manipulation.Extensions.IntegrationTests.csproj
+++ b/EntityFrameworkCore.Manipulation.Extensions.IntegrationTests/EntityFrameworkCore.Manipulation.Extensions.IntegrationTests.csproj
@@ -18,7 +18,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.1" />
-    <PackageReference Include="Microsoft.Data.SqlClient" Version="4.1.0" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
   </ItemGroup>
 
   <ItemGroup>
